--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,19 +17,20 @@ repos:
         language_version: python3.8
         args: [--target-version, "3.2"]
 
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.262
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.3
     hooks:
       - id: ruff
-        alias: autoformat
-        args: ["--fix"]
+        args: [--fix]
+      - id: ruff-format
 
-  - repo: https://github.com/psf/black
-    rev: 23.3.0
+  - repo: https://github.com/adamchainz/blacken-docs
+    rev: "1.16.0"
     hooks:
-      - id: black
-        language_version: python3.8
-        args: [--target-version, "py38"]
+      - id: blacken-docs
+        alias: autoformat
+        additional_dependencies:
+          - black==22.12.0
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.0-alpha.9-for-vscode
@@ -37,9 +38,39 @@ repos:
       - id: prettier
         # lint the following with prettier:
         # - javascript
+        # - svelte
         # - typescript
         # - JSX/TSX
         # - CSS
         # - yaml
         # ignore any minified code
-        files: '^(?!.*\.min\..*)(?P<name>[\w-]+(\.[\w-]+)*\.(js|jsx|ts|tsx|yml|yaml|css))$'
+        files: '^(?!.*\.min\..*)(?P<name>[\w-]+(\.[\w-]+)*\.(js|jsx|svelte|ts|tsx|yml|yaml|css))$'
+
+  - repo: https://github.com/rtts/djhtml
+    rev: "3.0.6"
+    hooks:
+      - id: djhtml
+        entry: djhtml --tabwidth 2
+        alias: autoformat
+
+  - repo: local
+    hooks:
+      - id: rustywind
+        name: rustywind Tailwind CSS class linter
+        language: node
+        additional_dependencies:
+          - rustywind@0.16.0
+        entry: rustywind
+        args: [--write]
+        types_or: [html, jsx, tsx]
+
+  - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+    rev: v2.11.0
+    hooks:
+      - id: pretty-format-toml
+        args: [--autofix]
+
+  - repo: https://github.com/abravalheri/validate-pyproject
+    rev: v0.15
+    hooks:
+      - id: validate-pyproject
