--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,6 +105,10 @@ omit = [
 ]
 source = ["django_q_registry"]
 
+[tool.django-stubs]
+django_settings_module = "tests.settings"
+strict_settings = false
+
 [tool.hatch.build]
 exclude = [
   ".github/*",
@@ -138,6 +142,12 @@ warn_unused_ignores = true
 ignore_errors = true
 ignore_missing_imports = true
 module = "tests.*"
+
+[[tool.mypy.overrides]]
+ignore_missing_imports = true
+module = [
+  "django_q.*"
+]
 
 [tool.mypy_django_plugin]
 ignore_missing_model_attributes = true
