--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,11 +14,10 @@ repos:
     rev: 1.15.0
     hooks:
       - id: django-upgrade
-        language_version: python3.8
         args: [--target-version, "3.2"]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.2.0
+    rev: v0.1.3
     hooks:
       - id: ruff
         args: [--fix]
@@ -33,44 +32,31 @@ repos:
           - black==22.12.0
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
+    rev: v3.0.3
     hooks:
       - id: prettier
         # lint the following with prettier:
         # - javascript
-        # - svelte
         # - typescript
         # - JSX/TSX
         # - CSS
         # - yaml
         # ignore any minified code
-        files: '^(?!.*\.min\..*)(?P<name>[\w-]+(\.[\w-]+)*\.(js|jsx|svelte|ts|tsx|yml|yaml|css))$'
+        files: '^(?!.*\.min\..*)(?P<name>[\w-]+(\.[\w-]+)*\.(js|jsx|ts|tsx|yml|yaml|css))$'
 
-  - repo: https://github.com/rtts/djhtml
-    rev: "3.0.6"
+  - repo: https://github.com/djlint/djLint
+    rev: v1.34.1
     hooks:
-      - id: djhtml
-        entry: djhtml --tabwidth 2
-        alias: autoformat
-
-  - repo: local
-    hooks:
-      - id: rustywind
-        name: rustywind Tailwind CSS class linter
-        language: node
-        additional_dependencies:
-          - rustywind@0.16.0
-        entry: rustywind
-        args: [--write]
-        types_or: [html, jsx, tsx]
+      - id: djlint-reformat-django
+      - id: djlint-django
 
   - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-    rev: v2.12.0
+    rev: v2.11.0
     hooks:
       - id: pretty-format-toml
         args: [--autofix]
 
   - repo: https://github.com/abravalheri/validate-pyproject
-    rev: v0.16
+    rev: v0.15
     hooks:
       - id: validate-pyproject
