--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,12 @@ requires = ["hatchling"]
 
 [project]
 authors = [
-  {name = "Josh", email = "josh@joshthomas.dev"}
+  {name = "Josh Thomas", email = "josh@joshthomas.dev"}
 ]
 classifiers = [
-  "Development Status :: 4 - Beta",
+  "Development Status :: 3 - Alpha",
   "Framework :: Django",
-  "Framework :: Django :: 3",
   "Framework :: Django :: 3.2",
-  "Framework :: Django :: 4",
   "Framework :: Django :: 4.2",
   "Framework :: Django :: 5.0",
   "License :: OSI Approved :: MIT License",
@@ -27,8 +25,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython"
 ]
 dependencies = [
-  "django>=3.2",
-  "django_q2>=1.4.3"
+  "django>=3.2"
 ]
 description = "A Django app to register Django Q tasks."
 dynamic = ["version"]
@@ -68,9 +65,9 @@ docs = [
 lint = ["pre-commit"]
 
 [project.urls]
-Documentation = "https://github.com/joshuadavidthomas/django-q-registry#readme"
-Issues = "https://github.com/joshuadavidthomas/django-q-registry/issues"
-Source = "https://github.com/joshuadavidthomas/django-q-registry"
+Documentation = "https://django-q-registry.westervelt.dev/"
+Issues = "https://github.com/westerveltco/django-q-registry/issues"
+Source = "https://github.com/westerveltco/django-q-registry"
 
 [tool.bumpver]
 commit = true
@@ -88,6 +85,9 @@ version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
   'assert __version__ == "{version}"'
 ]
 
+[tool.coverage.paths]
+source = ["src"]
+
 [tool.coverage.report]
 exclude_lines = [
   "pragma: no cover",
@@ -101,6 +101,7 @@ fail_under = 75
 
 [tool.coverage.run]
 omit = [
+  "src/django_q_registry/migrations/*",
   "tests/*"
 ]
 source = ["django_q_registry"]
@@ -109,13 +110,12 @@ source = ["django_q_registry"]
 django_settings_module = "tests.settings"
 strict_settings = false
 
+[tool.djlint]
+indent = 2
+
 [tool.hatch.build]
 exclude = [
-  ".github/*",
-  ".dockerfiles/*",
-  ".dockerignore",
-  ".editorconfig",
-  ".pre-commit-config.yaml",
+  ".*",
   "Justfile"
 ]
 
@@ -129,7 +129,6 @@ path = "src/django_q_registry/__init__.py"
 check_untyped_defs = true
 exclude = "docs/.*\\.py$"
 mypy_path = "src/"
-namespace_packages = false
 no_implicit_optional = true
 plugins = [
   "mypy_django_plugin.main"
@@ -141,12 +140,9 @@ warn_unused_ignores = true
 [[tool.mypy.overrides]]
 ignore_errors = true
 ignore_missing_imports = true
-module = "tests.*"
-
-[[tool.mypy.overrides]]
-ignore_missing_imports = true
 module = [
-  "django_q.*"
+  "django_q_registry.*.migrations.*",
+  "tests.*"
 ]
 
 [tool.mypy_django_plugin]
@@ -161,55 +157,54 @@ pythonpath = "src"
 testpaths = ["tests"]
 
 [tool.ruff]
-ignore = [
-  # Allow non-abstract empty methods in abstract base classes
-  "B027",  # Allow boolean positional values in function calls, like `dict.get(... True)`
-  "FBT003",  # Ignore checks for possible passwords
-  "S105",
-  "S106",
-  "S107",  # Ignore complexity
-  "C901",
-  "PLR0911",
-  "PLR0912",
-  "PLR0913",
-  "PLR0915"
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+# Exclude a variety of commonly ignored directories.
+exclude = [
+  ".bzr",
+  ".direnv",
+  ".eggs",
+  ".git",
+  ".github",
+  ".hg",
+  ".mypy_cache",
+  ".ruff_cache",
+  ".svn",
+  ".tox",
+  ".venv",
+  "__pypackages__",
+  "_build",
+  "build",
+  "dist",
+  "migrations",
+  "node_modules",
+  "venv"
 ]
-line-length = 120
+extend-include = ["*.pyi?"]
+# Allow autofix for all enabled rules (when `--fix`) is provided.
+fixable = ["A", "B", "C", "D", "E", "F", "I"]
+ignore = ["E501", "E741"]  # temporary
+indent-width = 4
+# Same as Black.
+line-length = 88
 select = [
-  "A",
-  "ARG",
-  "B",
-  "C",
-  "DTZ",
-  "E",
-  "EM",
-  "F",
-  "FBT",
-  "I",
-  "ICN",
-  "ISC",
-  "N",
-  "PLC",
-  "PLE",
-  "PLR",
-  "PLW",
-  "Q",
-  "RUF",
-  "S",
-  "T",
-  "TID",
-  "UP",
-  "W",
-  "YTT"
+  "B",  # flake8-bugbear
+  "E",  # Pycodestyle
+  "F",  # Pyflakes
+  "I",  # isort
+  "UP"  # pyupgrade
 ]
+# Assume Python >3.8.
 target-version = "py38"
-unfixable = [
-  # Don't touch unused imports
-  "F401"
-]
+unfixable = []
 
-[tool.ruff.flake8-tidy-imports]
-ban-relative-imports = "all"
+[tool.ruff.format]
+# Like Black, indent with spaces, rather than tabs.
+indent-style = "space"
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
+# Like Black, use double quotes for strings.
+quote-style = "double"
 
 [tool.ruff.isort]
 force-single-line = true
@@ -219,3 +214,7 @@ required-imports = ["from __future__ import annotations"]
 [tool.ruff.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
+
+[tool.ruff.pyupgrade]
+# Preserve types, even if a file imports `from __future__ import annotations`.
+keep-runtime-typing = true
