--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
   {name = "Josh Thomas", email = "josh@joshthomas.dev"}
 ]
 classifiers = [
-  "Development Status :: 3 - Alpha",
+  "Development Status :: 4 - Beta",
   "Framework :: Django",
   "Framework :: Django :: 3.2",
   "Framework :: Django :: 4.2",
@@ -25,9 +25,10 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython"
 ]
 dependencies = [
-  "django>=3.2"
+  "django>=3.2",
+  "django_q2>=1.4.3"
 ]
-description = "A Django app to register Django Q tasks."
+description = "A Django app to register periodic Django Q tasks."
 dynamic = ["version"]
 keywords = []
 license = {file = "LICENSE"}
