--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,6 +4,11 @@
 version: 2
 
 build:
+  apt_packages:
+    - just
+  jobs:
+    pre_build:
+      - just _cog
   os: ubuntu-22.04
   tools:
     python: "3.12"
