--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,11 +4,9 @@
 version: 2
 
 build:
-  apt_packages:
-    - just
   jobs:
     pre_build:
-      - just _cog
+      - cog -r docs/development/just.md
   os: ubuntu-22.04
   tools:
     python: "3.12"
