--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,6 +7,7 @@ build:
   jobs:
     pre_build:
       - asdf plugin add just
+      - asdf install just latest
       - cog -r docs/development/just.md
   os: ubuntu-22.04
   tools:
