--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,6 +8,7 @@ build:
     pre_build:
       - asdf plugin add just
       - asdf install just latest
+      - asdf global just latest
       - just _cog
   os: ubuntu-22.04
   tools:
