--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ requires-python = ">=3.8"
 [project.optional-dependencies]
 dev = [
   "bumpver",
+  "copier",
+  "copier-templates-extensions",
   "coverage[toml]",
   "django-stubs",
   "django-stubs-ext",
