compact and also toJSON

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
 
       - id: set-matrix
         run: |
-          MATRIX_JSON=$(nox -l --json | jq -r '[.[] | select(.name == "tests") | {"python-version": .python, "django-version": .call_spec.django}] | {include: .}')
+          MATRIX_JSON=${{ toJSON($(nox -l --json | jq -c '[.[] | select(.name == "tests") | {"python-version": .python, "django-version": .call_spec.django}] | {include: .}')) }}
           echo $MATRIX_JSON >> $GITHUB_STEP_SUMMARY
           echo "matrix=$MATRIX_JSON" >> $GITHUB_OUTPUT
 
