--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,53 +4,32 @@ on:
   release:
     types: [released]
 
+permissions:
+  contents: write
+
 jobs:
-  check:
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Check most recent test run on `main`
-        id: latest-test-result
-        run: |
-          echo "result=$(gh run list \
-                          --branch=main \
-                          --workflow=test.yml \
-                          --json headBranch,workflowName,conclusion \
-                          --jq '.[] | select(.headBranch=="main" and .conclusion=="success") | .conclusion' \
-                          | head -n 1)" >> $GITHUB_OUTPUT
-
-      - name: OK
-        if: ${{ (contains(steps.latest-test-result.outputs.result, 'success')) }}
-        run: exit 0
-
-      - name: Fail
-        if: ${{ !contains(steps.latest-test-result.outputs.result, 'success') }}
-        run: exit 1
+  test:
+    uses: ./.github/workflows/test.yml
 
   pypi:
     if: ${{ github.event_name == 'release' }}
     runs-on: ubuntu-latest
-    needs: check
+    needs: test
     environment: release
     permissions:
       contents: read
       id-token: write
     steps:
       - uses: actions/checkout@v4
-        with:
-          persist-credentials: false
 
-      - uses: westerveltco/setup-ci-action@v0
+      - uses: actions/setup-python@v5
         with:
           python-version: 3.12
-          extra-python-dependencies: hatch
-          use-uv: true
+
+      - name: Install dependencies
+        run: |
+          python -m pip install -U pip uv
+          python -m uv pip install --system hatch
 
       - name: Build package
         run: |
